--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,7 +17,7 @@ set -s escape-time 10                     # faster command sequences
 set -sg repeat-time 600                   # increase repeat timeout
 set -s focus-events on
 
-set -g prefix C-I                       # GNU-Screen compatible prefix
+set -g prefix C-q                       # GNU-Screen compatible prefix
 bind C-I send-prefix 
 
 set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
